# odc

./: .gitignore  CHANGELOG.md  README.md  TODO.md  pyproject.toml  requirements.txt
notebooks/: average_maps.ipynb  bla.ipynb  bla.py  decoding_extrastriate.ipynb  decoding_filter.ipynb  decoding_profile.ipynb  decoding_profile2.ipynb  filter_size.ipynb  make_maps.ipynb  make_maps2.ipynb  n_features.ipynb  number_of_features.inpynb  reliability.ipynb  spatial_frequency.ipynb  tmp.ipynb  tymp.ipynb  univariate_profile.ipynb
notebooks/manuscript/: decoding_extrastriate.ipynb  decoding_profile.ipynb  make_maps.ipynb  n_features.ipynb  reliability.ipynb  univariate_profile.ipynb
notebooks/marianna/: check_univariate_profile.ipynb
notebooks/review/: decoding_bayes.ipynb  n_features_univariate_profile.ipynb  reliability_layer.ipynb  spatial_scale.ipynb  v1_v3.ipynb
notebooks/tmp/: decoding_profile2.ipynb
notebooks_marianna/: check_univariate_profile.ipynb
notebooks_marianna/label_daniel/: lh.subj2_session_1_layer_1.label  lh.subj2_session_1_layer_2.label  lh.subj2_session_1_layer_4.label  lh.subj2_session_1_layer_5.label  lh.subj2_session_1_layer_6.label  lh.subj2_session_1_layer_8.label  lh.subj2_session_2_layer_0.label  lh.subj2_session_2_layer_1.label  lh.subj2_session_2_layer_3.label  rh.subj2_session_1_layer_1.label  rh.subj2_session_1_layer_3.label  rh.subj2_session_1_layer_9.label  rh.subj2_session_2_layer_0.label  rh.subj2_session_2_layer_1.label
notebooks_review/: columnarity_index.ipynb  decoding_bayes.ipynb  decoding_same_features.ipynb  n_features_univariate.ipynb  n_features_univariate_profile.ipynb  reliability_layer.ipynb  spatial_scale.ipynb  test_double_peak.ipynb  v1_v3.ipynb
review/: reliability_layer.ipynb
scripts/: decoding_extrastriate.py  decoding_nfeatures.py  decoding_profile.py  make_maps.py  n_features.py  reliability.py  univariate_profile.py
scripts_marianna/: check_univariate_profile.ipynb  check_univariate_profile.py
scripts_marianna/label_daniel/: lh.subj2_session_1_layer_0.label  (+39 more)
scripts_review/: columnarity.py  decoding_bayes.py  map_label.py  n_features_univariate_profile.py  reliability_layer.py  spatial_scale.py  test_double_peak.py  v1_v3.ipynb  v1_v3.py
src/: __init__.py  bayes.py  config.py  corrstats.py  cycle.py  data.py  default.mplstyle  helper.py  mvpa.py  mvpa_review.py  mvpa_same_layer.py  nfeatures.py  retinotopy.py  review.py  sphere.py  stats.py  utils.py
(+46 files in other folders)
