[tool.poetry]
name = "odc"
version = "0.2.0"
description = "Some analysis script for the ODC project"
authors = ["Daniel Haenelt <daniel.haenelt@gmail.com>"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/haenelt/odc"
keywords = ["fmri", "odc", "layer", "columns"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
matplotlib = "^3.6.2"
nibabel = "^4.0.2"
scipy = "^1.9.3"
ipykernel = "^6.20.1"
palettable = "^3.3.0"
fmri-decoder = {git = "https://github.com/haenelt/fmri-decoder", rev = "main"}
pymc = "^5.10.4"
arviz = "^0.17.0"
graphviz = "^0.20.1"
fmri-tools = {git = "https://github.com/haenelt/FmriTools", rev = "release-1.0.3"}
joblib = "^1.2.0"
pyarrow = "^10.0.1"
statsmodels = "^0.13.5"
tqdm = "^4.65.0"
neuropythy = "^0.12.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
