[tool.poetry]
name = "odc"
version = "0.3.0"
description = "Some analysis script for the ODC project"
authors = ["Daniel Haenelt <daniel.haenelt@gmail.com>"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/haenelt/odc"
keywords = ["fmri", "odc", "layer", "columns"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
matplotlib = "^3.6.2"
nibabel = "^4.0.2"
fmri-tools = {git = "https://github.com/haenelt/FmriTools", rev = "release-1.0.3"}
fmri-decoder = {git = "https://github.com/haenelt/fmri-decoder", rev = "main"}
joblib = "^1.2.0"
pyarrow = "^10.0.1"
ipykernel = "^6.20.1"
palettable = "^3.3.0"
statsmodels = "^0.13.5"
tqdm = "^4.65.0"
diptest = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
